Revision history for File::DataClass

0.35.1    2014-05-01 15:28:33
          - Moo / Role::Tiny upgrade must expicitely use feature 'state'. Thanks
          - Call to n::s now excepts import
          - Moved location of namespace::clean calls. Yuck
          - Replaced JSON with JSON::MaybeXS
          - Deprecated ::IO::empty in favour of is_empty
          - Fixed ::IO::iterator sort order

0.34.1    2014-04-04 11:50:35
          - Improved test coverage
          - Fixed directory pattern match
          - Fixed definedness bug in ::HashMerge
          - JSON storage gives better error messages
          - Removed Ident: labels and VERSION

0.33.1    2014-01-24 20:54:00
          - Updated gitpre commit hook
          - Updated Unexpected dependency
          - Took ::Resulset find_and_update private

0.32.1    2014-01-15 17:17:35
          - Use Unexpected::Functions::has_exception not add_exception
          - Except old WithLanguage storage subclass from extension_map

0.31.1    2014-01-13 18:34:25
          - Create extension_map stateful function
          - Improved test coverage
          - Created STORAGE_BASE constant
          - Refactored extension to storage class mapping
          - Fixed requiring Cwd in ::IO

0.30.1    2014-01-02 02:31:15
          - Skipped stale cache test on NTFS

0.29.1    2014-01-01 17:01:42
          - Fixed regex where clause matching
          - Fixed hash order bug in tests

0.28.1    2014-01-01 14:52:36
          - Define and use exception classes
          - Split out Storage::XML to own distribution
          - Made spell checking work with utf8
          - Simplified Build.PL. Updated test boilerplate
          - Uses DZ::P::AbstractFromPOD and LicenseFromModule
          - Dropped dependency on Class::Load

0.27.1    2013-11-22 09:40:23
          - Bumped Unexpected dependency to v0.15
          - ::IO::rel2abs stringifies the base arg
          - Updated git hooks

0.26.1    2013-09-26 17:02:33