@@ -26,7 +26,7 @@ use Unexpected::Types          qw( ArrayRef Bool CodeRef Int Maybe Object
                                    PositiveInt RegexpRef SimpleStr Str );
 
 use namespace::clean -except => [ 'import', 'meta' ];
-use overload '""' => sub { shift->pathname }, fallback => 1;
+use overload '""' => sub { $_[ 0 ]->pathname }, fallback => 1;
 
 our @EXPORT    = qw( io );
 
@@ -46,6 +46,7 @@ has 'name'          => is => 'rwp',  isa => SimpleStr,      default => NUL,
    coerce           => \&__coerce_name,                     lazy    => TRUE  ;
 has '_perms'        => is => 'rwp',  isa => PositiveInt,    default => PERMS,
    init_arg         => 'perms'                                               ;
+has 'reverse'       => is => 'lazy', isa => Bool,           default => FALSE ;
 has 'sort'          => is => 'lazy', isa => Bool,           default => TRUE  ;
 has 'type'          => is => 'rwp',  isa => Maybe[$IO_TYPE]                  ;
 
@@ -293,17 +294,19 @@ sub canonpath {
 sub catdir {
    my ($self, @rest) = @_;
 
-   my @args = grep { defined and length } $self->name, @rest;
+   my $params = (is_hashref $rest[ -1 ]) ? pop @rest : {};
+   my $args   = [ grep { defined and length } $self->name, @rest ];
 
-   return $self->_constructor( \@args )->dir;
+   return $self->_constructor( $args, $params )->dir;
 }
 
 sub catfile {
    my ($self, @rest) = @_;
 
-   my @args = grep { defined and length } $self->name, @rest;
+   my $params = (is_hashref $rest[ -1 ]) ? pop @rest : {};
+   my $args   = [ grep { defined and length } $self->name, @rest ];
 
-   return $self->_constructor( \@args )->file;
+   return $self->_constructor( $args, $params )->file;
 }
 
 sub chmod {
@@ -388,7 +391,7 @@ sub copy {
 }
 
 sub cwd {
-   return $_[ 0 ]->_constructor( Cwd::getcwd() );
+   my $self = shift; return $self->_constructor( Cwd::getcwd(), @_ );
 }
 
 sub deep {
@@ -492,7 +495,10 @@ sub _find {
          and push @all, $io->_find( $files, $dirs, $level ? $level - 1 : 0 );
    }
 
-   return $self->sort ? sort { $a->name cmp $b->name } @all : @all;
+   not $self->sort and return @all;
+
+   return $self->reverse ? reverse sort { $a->name cmp $b->name } @all
+        :                          sort { $a->name cmp $b->name } @all;
 }
 
 sub _get_atomic_path {
@@ -692,9 +698,11 @@ sub move {
 sub next {
    my $self = shift; defined (my $name = $self->read_dir) or return;
 
-   my $io = $self->_constructor( [ $self->name, $name ] );
+   my $io = $self->_constructor( [ $self->name, $name ], {
+      reverse => $self->reverse, sort => $self->sort } );
 
    defined $self->_filter and $io->filter( $self->_filter );
+
    return $io;
 }
 
@@ -1130,6 +1138,11 @@ File open mode. Defaults to 'r' for reading. Can any one of; 'a',
 Defaults to undef. This must be set in the call to the constructor or
 soon after. Can be a C<coderef>, an C<objectref>, an C<arrayref>, or
 a scalar. After coercion to a scalar leading tilde expansion takes place
+
+=item C<reverse>
+
+Boolean defaults to false. Reverse the direction of the sort on the output
+of the directory listings
 
 =item C<sort>
 
